# python-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-dev.sh  main.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/: main.py
tests/: test_main.py
