[project]
name = "python-template"
description = "A template for Python projects."
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
]
