[project]
name = "python-template"
description = "A template for Python projects."
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
exclude = [
    ".venv",
]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
]
